# sensus-cli

./: .gitignore  README.md  default_config.toml  devenv.nix  dfu.py  pyproject.toml  sensus.py  setup.py
sensus/: dfu.py  sensus.py
sensus/util/: util.py
